<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="P_Serial_Com" Id="{fa981f30-4d2c-4d48-ab6c-00ec78d696a1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Serial_Com
VAR
	fbSerialLineControl_EL6001_M1K4: SerialLineControl;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//These are the global IOs...don't forget to copy your data into them

(* EL6001 Serial port 0 com function *)
fbSerialLineControl_EL6001_M1K4(Mode:= SERIALLINEMODE_EL6_22B (*SERIALLINEMODE_KL6_22B_STANDARD*),
						        pComIn:= ADR(Serial_stComIn_M1K4),
						   	    pComOut:=ADR(Serial_stComOut_M1K4),
						        SizeComIn:= SIZEOF(Serial_stComIn_M1K4),
						        TxBuffer:= Serial_TXBuffer_M1K4,
						        RxBuffer:= Serial_RXBuffer_M1K4,
						        Error=> ,
						        ErrorID=> );]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>